--- a/src/components/pages/ItemProdutcsList/ItemProductsList.css
+++ b/src/components/pages/ItemProdutcsList/ItemProductsList.css
@@ -1,5 +1,12 @@
+.cards-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .saludo {
   text-align: center;
   color: steelblue;
-  
 }
