--- a/src/components/pages/ItemProdutcsList/ItemProductsList.css
+++ b/src/components/pages/ItemProdutcsList/ItemProductsList.css
@@ -5,8 +5,6 @@
   gap: 50px;
   flex-wrap: wrap;
   justify-content: center;
-}
-.saludo {
-  text-align: center;
-  color: steelblue;
+  padding: 20px;
+  min-height: 100vh;
 }
